# protint

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pypi-installation.sh  pyproject.toml
example/: run_example.sh
example/model-input-data/: targets.csv
src/protint/: cli.py
src/protint/dataset/: __init__.py  dataloader.py  gen_embed.py  imgt_annotator.py  parse.py
src/protint/model/: __init__.py  layers.py  model.py
src/protint/model/submodules/: __init__.py  esm_c_embed.py  protein_mpnn_embed.py  protein_mpnn_utils.py
src/protint/workflow/: __init__.py  predict.py  train.py
